Eroare teste getDuration() rezolvata + Add + Delete

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 322CA - Mihai-Alexandru Georgescu |
-Proiect - Etapa 1 - POO TV        |
+Proiect - POO TV                  |
 __________________________________|
 
 -> Scurta descriere a programului:
